# BattleShip_Game

./: .gitignore  BattleShip_Game  CMakeLists.txt  README.md  main.c
SDL/SDL2-mingw/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
libs/SDL2-2.0.18/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2-config.cmake  sdl2.pc
libs/SDL2-2.0.18/include/: SDL_config.h  SDL_revision.h
libs/SDL2_image-2.0.5/: Makefile  config.status  libSDL2_image.la  libtool  showimage
libs/SDL2_image-2.0.5/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
libs/SDL2_image-2.0.5/.libs/: libSDL2_image.lai  showimage
libs/SDL2_ttf-2.0.15/: Makefile  config.status  glfont  libSDL2_ttf.la  libtool  showfont
libs/SDL2_ttf-2.0.15/.deps/: SDL_ttf.Plo  glfont.Po  showfont.Po
libs/SDL2_ttf-2.0.15/.libs/: glfont  showfont
libs/local/lib/: libSDL2-2.0.so.0  libSDL2.la  libSDL2_image-2.0.so.0.2.3  libSDL2_ttf-2.0.so.0.14.1  libSDL2_ttf.la  libSDL2main.la
libs/local/lib/pkgconfig/: SDL2_image.pc  SDL2_ttf.pc
